// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component matches snapshot for default variant 1`] = `
<textarea
  class="sc-bRKDuR hTXFGS"
  data-testid="text-area"
  placeholder="Enter text here"
>
  snapshot default
</textarea>
`;

exports[`TextArea Component matches snapshot for report variant 1`] = `
<textarea
  class="sc-hvigdm fSepiK"
  data-testid="text-area"
  placeholder="Report here"
>
  snapshot report
</textarea>
`;
